<resources>
    <string name="app_name">FitHub2.0</string>
    <!--
    //// GYM STRINGS
-->
    <string name="gymError">
    Error in Loading Image
  </string>
    <string name="GymHeading">
    Warm Up with Dumbbell
  </string>
    <string name="gymcontent">
    Get your body ready for a great workout
  </string>
    <string name="gymsubheading">
        Start Workout
    </string>
    <!--
    //// YOGA STRINGS
-->
    <string name="YogaHeading">
    Yoga for Beginners
  </string>
    <string name="Yogacontent">Learn the basics of yoga in a safe and supportive environment.
  </string>
    <string name="Yogasubheading">
        Featured
    </string>

    <!--
    //// LOGIN & REGISTRATION STRINGS
-->
    <string name="login_here">
Login here
</string>
    <string name="welcome_bac">
            Welcome back you\'ve\nbeen missed!
        </string>
    <string name="signup">
        Create Account
    </string>
    <string name="signup_content">
        Get inspired, get fit! \nCreate an account to explore.
    </string>
    <string name="welcome_context">Discover Your\nStrength With Us
    </string>

    <string name="welcome_context2">Explore a vast library of workouts and discover new ways to move your body.</string>
    <!--
    Start Exercise button text
    -->
    <string name="gymBtn">Start Exercise</string>
    <string name="title_activity_yoga_selected">YogaSelected</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="yogabtn">Start Yoga</string>

</resources>